# MathLibrary

./: CMakeLists.txt
app/: main.cpp  testArithmetic.cpp  testFinancials.cpp  testVectors.cpp
include/: arithmetic_operations.h  financials.h  operations.h  vector_operations.h
src/: financial_operations.cpp  operations.cpp  vector_operations.cpp
